tests/NormalTests/paczka1/fuzzy1/61679494.err
Error in line 11: y4t A993 71,5
Error in line 10: GgGeFW3 A165 47,5
Error in line 5: 9Bq3c69Jf A993 44,6
Error in line 16: 9Bq3c69Jf S57 14,0
Error in line 14: GgGeFW3 S57 12,4
Error in line 18: GgGeFW3 S186 54,7
Error in line 15: 9zyL5WaEa73 A993 79,1
Error in line 34: EyTu2qnqf A993 95,9
